# TallerEstructura3

./: CMakeLists.txt  README.md  taller
src/data/: listadoTransacciones.rar  listadoTransacciones.txt
src/include/: Nodo.h  arbolAVL.h  persona.h  transaccion.h
src/src/: Nodo.cpp  arbolAVL.cpp  main.cpp  persona.cpp  transaccion.cpp
